--- a/source/2019_ky_1.html
+++ b/source/2019_ky_1.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>2019年全国硕士研究生入学统一考试英语(一)真题</title>
+</head>
+<body>
 <p>　　　　　　2019年全国硕士研究生入学统一考试英语(一)真题</p>
 
 <p>　　　　　　　　　　　　　　　　　　Section I Use of English</p>
@@ -397,3 +406,5 @@
 <p>　You should write neatly on the ANSWER SHEET. (20 points )</p>
 
 <pre><code>      </code></pre>
+</body>
+</html>
