--- a/_docs/index.html
+++ b/_docs/index.html
@@ -485,8 +485,8 @@
       <article id="main" class="content">
         <h1 id="ankiclip---%E8%80%83%E8%AF%95%E7%9C%9F%E9%A2%98">AnkiClip - 考试真题 <a class="heading-anchor-permalink" href="#ankiclip---%E8%80%83%E8%AF%95%E7%9C%9F%E9%A2%98">#</a></h1>
 <h2 id="%E8%80%83%E7%A0%94">考研 <a class="heading-anchor-permalink" href="#%E8%80%83%E7%A0%94">#</a></h2>
-<p><a href="./2019_ky_1.html">2019 英语一</a>
-<a href="./ky_2005_2016.html">2005 - 2016 英语一</a></p>
+<p><a href="./2019_ky_1.html">2019 英语一</a></p>
+<p><a href="./ky_2005_2016.html">2005 - 2016 英语一</a></p>
 
       </article>
     </div>
