--- a/public/考研英语一/2019.html
+++ b/public/考研英语一/2019.html
@@ -477,9 +477,23 @@
       </a>
       <nav id="menu">
         <ul>
-<li><a class="" href="index.html">index</a></li>
-<li><a class="active" href="2019_ky_1.html">2019 ky 1</a></li>
-<li><a class="" href="ky_2005_2016.html">ky 2005 2016</a></li>
+<li><a class="" href="../index.html">index</a></li>
+<li class="heading"><span>考研英语一</span></li>
+<ul>
+<li><a class="" href="2005.html">2005</a></li>
+<li><a class="" href="2006.html">2006</a></li>
+<li><a class="" href="2007.html">2007</a></li>
+<li><a class="" href="2008.html">2008</a></li>
+<li><a class="" href="2009.html">2009</a></li>
+<li><a class="" href="2010.html">2010</a></li>
+<li><a class="" href="2011.html">2011</a></li>
+<li><a class="" href="2012.html">2012</a></li>
+<li><a class="" href="2013.html">2013</a></li>
+<li><a class="" href="2014.html">2014</a></li>
+<li><a class="" href="2015.html">2015</a></li>
+<li><a class="" href="2016.html">2016</a></li>
+<li><a class="active" href="2019.html">2019</a></li>
+</ul>
 </ul>
       </nav>
       <article id="main" class="content">
@@ -488,11 +502,11 @@
 <p>Section I Use of English</p>
 <p>Directions:</p>
 <p>Read the following text. Choose the best word (s) for each numbered blank and mark A, B, C or D on the ANSWER SHEET. (10 points)</p>
-<p>Today we live in a world where GPS systems, digital maps, and other navigation apps are available on our smart phone. <em><strong>1</strong></em> of us just walk straight into the woods without a phone. But phones__2__on batteries, and batteries can die faster than we realize.__3__you get lost without a phone or a compass, and you __4__can’t find north, we have a few tricks to help you navigate__5__to civilization, one of which is to follow the land.</p>
-<p>When you find yourself well__6__ a trail, but not in a completely __7__area, you have to answer two questions: Which __8__is downhill, in this particular area? And where is the nearest water source? Humans overwhelmingly live in valleys, and on supplies of fresh water.<strong>9</strong>, if you head downhill, and follow any H2O you find, you should __10__see signs of people.</p>
-<p>If you’ve explored the area before, keep an eye out for familiar sights—you may be __11__how quickly identifying a distinctive rock or tree can restore your bearings.</p>
-<p>Another__12__:Climb high and look for signs of human habitation.<strong>13</strong>,even in dense forest, you should able to <strong>14__gaps in the tree line due to roads, train tracks, and other paths people carve__15</strong> the woods. Head toward these <strong>16</strong> to find a way out. At night, scan the horizon for <strong>17</strong> light sources, such as fires and streetlights, then walk toward the glow of light pollution.</p>
-<p><strong>18</strong>,assuming you’re lost in an area humans tend to frequent, look for the __19__we leave on the landscape. Trail blazes, tire tracks, and other features can __20__you to civilization.</p>
+<p>Today we live in a world where GPS systems, digital maps, and other navigation apps are available on our smart phone. [1]  of us just walk straight into the woods without a phone. But phones  [2]  on batteries, and batteries can die faster than we realize.  [3]  you get lost without a phone or a compass, and you   [4]  can’t find north, we have a few tricks to help you navigate  [5]  to civilization, one of which is to follow the land.</p>
+<p>When you find yourself well  [6]   a trail, but not in a completely   [7]  area, you have to answer two questions: Which   [8]  is downhill, in this particular area? And where is the nearest water source? Humans overwhelmingly live in valleys, and on supplies of fresh water.  [9]  , if you head downhill, and follow any H2O you find, you should   [10]  see signs of people.</p>
+<p>If you’ve explored the area before, keep an eye out for familiar sights—you may be   [11]  how quickly identifying a distinctive rock or tree can restore your bearings.</p>
+<p>Another  [12]  :Climb high and look for signs of human habitation.  [13]  ,even in dense forest, you should able to   [14]  gaps in the tree line due to roads, train tracks, and other paths people carve  [15]   the woods. Head toward these   [16]   to find a way out. At night, scan the horizon for   [17]   light sources, such as fires and streetlights, then walk toward the glow of light pollution.</p>
+<p>[18]  ,assuming you’re lost in an area humans tend to frequent, look for the   [19]  we leave on the landscape. Trail blazes, tire tracks, and other features can   [20]  you to civilization.</p>
 <p>1. [A] Some	[B] Most	[C] Few	[D] All</p>
 <p>2. [A] put	[B] take	[C] run 	[D] come</p>
 <p>3. [A] Since	[B] If	[C] Though	[D] Until</p>
